versioned_docs/version-3.2.0/intro.mdx
---
sidebar_position: 1
---

# Luda Log

운영과 구조,
그리고 기록을 중심으로 정리한 개발 아카이브.

이 공간은 단순한 프로젝트 소개보다,
실제 서비스 운영 과정에서 마주했던 문제와
그 과정에서 고민했던 구조들을 기록하기 위해 만들어졌습니다.

---

## 이 아카이브에 대하여

대학교에서는 문예창작을 전공했고,
이후 외주 프로젝트와 운영 경험을 통해
실서비스 환경에서의 개발을 경험하게 되었습니다.

특히 약 30개 매장에서 사용된 스트리밍 및 랭킹 시스템 구축 경험은
"기능 구현"보다
"운영 안정성과 구조"
그리고
"고객 경험"
이 훨씬 중요하다는 사실을 체감하게 만든 프로젝트였습니다.

이 아카이브는 그러한 경험들을
단순 결과물이 아니라
"왜 이러한 구조를 선택했는가"
라는 관점에서 정리하고 있습니다.

---

## 주요 기록

- 실시간 랭킹 시스템 설계
- 스트리밍 및 Signed URL 인증 구조
- JWT 기반 관리자 인증 흐름
- KPI 및 운영 시스템 설계
- Docker 및 CI/CD 구축 경험
- WebRTC 기반 카메라 제어 프로젝트
- with 크래프톤 정글

---

## 기록하려는 것

이곳에서는 단순히 사용 기술만 정리하지 않습니다.

대신 아래와 같은 질문들을 중심으로 기록합니다.

- 왜 Polling 대신 SSE를 선택했는가
- 왜 JWT 기반 구조를 도입했는가
- 운영 과정에서 어떤 문제가 발생했는가
- 실제 사용 환경은 개발 환경과 무엇이 달랐는가
- 고객 경험은 시스템 구조에 어떤 영향을 주었는가

---

## 기술보다 중요한 것

프로젝트를 진행하면서
가장 크게 느낀 것은
좋은 구조는 결국 실제 운영 환경 속에서 만들어진다는 점이었습니다.

실제 사용자의 불편,
운영 중 발생하는 병목,
예상하지 못한 환경 문제들 속에서
구조는 계속 수정되고 개선되었습니다.

이 기록들은 그러한 과정들의 흔적입니다.

---

## About Luda Log

Luda Log는 단순한 프로젝트 정리 공간이 아니라,

운영 중의 문제,
구조적 고민,
실패한 설계,
그리고 기록 자체를 하나의 아카이브처럼 남기기 위한 실험입니다.

더 자세한 설명은
Luda Log Wiki 문서를 참고해주세요.

## Quick Access

- Read the [official documentation](https://docusaurus.io/)
- Modify your site configuration with [`docusaurus.config.js`](https://docusaurus.io/docs/api/docusaurus-config)
- Add navbar and footer items with [`themeConfig`](https://docusaurus.io/docs/api/themes/configuration)
- Add a custom [Design and Layout](https://docusaurus.io/docs/styling-layout)
- Add a [search bar](https://docusaurus.io/docs/search)
- Find inspirations in the [Docusaurus showcase](https://docusaurus.io/showcase)
- Get involved in the [Docusaurus Community](https://docusaurus.io/community/support)
